feat: scale trainer site for multi-client deployment

--- a/index.html
+++ b/index.html
@@ -3,7 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Titanium Physique | Twój Trener Personalny</title>
+    <title>Trener Personalny Bydgoszcz | Trening 1:1 i Online</title>
+    <meta name="description" content="Nowoczesna strona trenera personalnego w Bydgoszczy. Trening 1:1, prowadzenie online i konsultacja startowa." />
+    <meta name="robots" content="index,follow" />
+    <meta name="theme-color" content="#09090b" />
+    <link rel="canonical" href="https://twojadomena.pl/" />
+    <meta property="og:title" content="Trener Personalny Bydgoszcz | Trening 1:1 i Online" />
+    <meta property="og:description" content="Indywidualne treningi i prowadzenie online w Bydgoszczy." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://twojadomena.pl/" />
+    <meta property="og:image" content="https://images.unsplash.com/photo-1571019614242-c5c5dee9f50b?q=80&w=1200&auto=format&fit=crop" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Trener Personalny Bydgoszcz | Trening 1:1 i Online" />
+    <meta name="twitter:description" content="Trening 1:1 i prowadzenie online. Umow bezplatna konsultacje startowa." />
+    <meta name="twitter:image" content="https://images.unsplash.com/photo-1571019614242-c5c5dee9f50b?q=80&w=1200&auto=format&fit=crop" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,17 +30,17 @@
             },
             colors: {
               brand: {
-                50: '#f4fce3',
-                100: '#e9f9c6',
-                200: '#dcf59f',
-                300: '#caee6e',
-                400: '#b2e23a',
-                500: '#94c918',
-                600: '#73a10f',
-                700: '#577b10',
-                800: '#466113',
-                900: '#3a4f15',
-                950: '#1e2b05',
+                50: 'var(--brand-50, #f4fce3)',
+                100: 'var(--brand-100, #e9f9c6)',
+                200: 'var(--brand-200, #dcf59f)',
+                300: 'var(--brand-300, #caee6e)',
+                400: 'var(--brand-400, #b2e23a)',
+                500: 'var(--brand-500, #94c918)',
+                600: 'var(--brand-600, #73a10f)',
+                700: 'var(--brand-700, #577b10)',
+                800: 'var(--brand-800, #466113)',
+                900: 'var(--brand-900, #3a4f15)',
+                950: 'var(--brand-950, #1e2b05)',
               }
             }
           }
@@ -35,11 +48,66 @@
       }
     </script>
     <style>
+      :root {
+        color-scheme: dark;
+        --brand-400: #b2e23a;
+        --brand-500: #94c918;
+        --brand-600: #73a10f;
+        --app-bg: #090b05;
+        --app-bg-soft: #12170a;
+        --app-surface: #171f0e;
+        --app-surface-alt: #222d14;
+        --app-border: #33411c;
+        --app-muted: #b6c5a1;
+      }
+
       body {
-        background-color: #09090b; /* Zinc 950 */
+        background-color: var(--app-bg);
         color: #fff;
         scroll-behavior: smooth;
       }
+
+      .bg-zinc-950 {
+        background-color: var(--app-bg) !important;
+      }
+
+      .bg-zinc-900 {
+        background-color: var(--app-surface) !important;
+      }
+
+      .bg-zinc-800 {
+        background-color: var(--app-surface-alt) !important;
+      }
+
+      .border-zinc-900,
+      .border-zinc-800,
+      .border-zinc-700 {
+        border-color: var(--app-border) !important;
+      }
+
+      .text-zinc-400,
+      .text-zinc-500 {
+        color: var(--app-muted) !important;
+      }
+
+      html {
+        scroll-padding-top: 104px;
+      }
+
+      .skip-link {
+        transform: translateY(-200%);
+        transition: transform 0.2s ease;
+      }
+
+      .skip-link:focus-visible {
+        transform: translateY(0);
+      }
+
+      :focus-visible {
+        outline: 2px solid var(--brand-500, #94c918);
+        outline-offset: 2px;
+      }
+
       /* Custom scrollbar */
       ::-webkit-scrollbar {
         width: 10px;
@@ -52,23 +120,74 @@
         border-radius: 5px;
       }
       ::-webkit-scrollbar-thumb:hover {
-        background: #94c918;
+        background: var(--brand-500, #94c918);
+      }
+
+      @media (prefers-reduced-motion: reduce) {
+        html:focus-within {
+          scroll-behavior: auto;
+        }
+
+        *,
+        *::before,
+        *::after {
+          animation-duration: 0.01ms !important;
+          animation-iteration-count: 1 !important;
+          transition-duration: 0.01ms !important;
+          scroll-behavior: auto !important;
+        }
       }
     </style>
-  <script type="importmap">
-{
-  "imports": {
-    "lucide-react": "https://esm.sh/lucide-react@^0.574.0",
-    "recharts": "https://esm.sh/recharts@^3.7.0",
-    "react/": "https://esm.sh/react@^19.2.4/",
-    "react": "https://esm.sh/react@^19.2.4",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.41.0"
-  }
-}
-</script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "Trener Personalny Bydgoszcz",
+        "description": "Trener personalny stacjonarnie w Bydgoszczy i online.",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Bydgoszcz",
+          "addressCountry": "PL"
+        },
+        "areaServed": ["Bydgoszcz", "Polska"],
+        "url": "https://twojadomena.pl/"
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "FAQPage",
+        "mainEntity": [
+          {
+            "@type": "Question",
+            "name": "Czy musze chodzic na silownie?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Nie. Ukladam plany treningowe rowniez do wykonania w domu, z minimalnym sprzetem lub masa wlasnego ciala."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "Czy dieta jest bardzo restrykcyjna?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Dieta ma byc stylem zycia, a nie katorga. Stawiam na elastyczne podejscie i dlugofalowe nawyki."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "Kiedy zobacze pierwsze efekty?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Pierwsze zmiany w samopoczuciu zwykle pojawiaja sie juz po pierwszym tygodniu regularnej pracy."
+            }
+          }
+        ]
+      }
+    </script>
 </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
